feat: 完善商品档案管理与云端上传能力
- 支持货号、单位、颜色尺码及条码管理
- 增加商品 Excel 只读导入预览
- 保证商品与 SKU 原子更新，避免误覆盖库存
- 接入腾讯云 COS 图片及文件上传
- 增加尺码标签配置和数据库迁移脚本
- 优化移动端布局、登录态校验及 HTTPS 部署
- 补充商品目录、导入预览和 COS 上传测试